--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
-<!DOCTYPE html><html><head>
-    <title>A Aventura De Elizabeth</title>
-    <link rel="shortcut icon" href="./menina/idle/menina-idle-left.png" type="image/x-png">
-    <script src="./lib/p5.min.js"></script>
-    <script src="./lib/p5.dom.min.js"></script>
-    <script src="./lib/p5.sound.min.js"></script>
-    <script src="./lib/p5.play.js"></script>
-    <script src="./lib/p5.gif.min.js"></script>
-    <script src="./lib/matter.min.js"></script>
-    
-    <meta charset="utf-8">
-    <!-- Sweet Alert -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <script src="./lib/sweetalert.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./lib/sweetalert.css" />
+<!DOCTYPE html>
+<html>
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    
-  </head>
-  <body>
-      <script src="sketch.js"></script>
-  
+<head>
+  <!--<meta name="viewport" content="width=device-width,
+  user-scalable=yes, initial-scale=1, maximum-scale=1" />-->
 
-</body></html>
+  <title>A Aventura De Elizabeth</title>
+  <link rel="shortcut icon" href="./assets/menina/idle/menina-idle-right.png" type="image/x-png">
+  <script src="./lib/p5.min.js"></script>
+  <script src="./lib/p5.sound.min.js"></script>
+  <script src="./lib/p5.play.js"></script>
+  <script src="./lib/p5.gif.min.js"></script>
+  <script src="./lib/matter.min.js"></script>
+
+  <meta charset="utf-8">
+  <!-- Sweet Alert -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="./lib/sweetalert.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="./lib/sweetalert.css" />
+
+  <link rel="stylesheet" type="text/css" href="style.css" />
+
+</head>
+
+<body>
+  <script src="sketch.js"></script>
+
+
+</body>
+
+</html>
 <!--   -->
